--- a/python/readfiles/tox.ini
+++ b/python/readfiles/tox.ini
@@ -8,6 +8,7 @@ setenv = VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/test-requirements.txt
 commands =
     /usr/bin/find . -type f -name "*.pyc" -delete
+    /usr/bin/dd if=/dev/urandom of="sample.txt" bs=64M count=32
 
 [testenv:test_files]
 commands =
